// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error component > renders default title, message and button snapshot 1`] = `
.emotion-0 {
  background-color: #FFFFF3;
  color: #1D263B;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  padding: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 2rem;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  background-color: default;
  min-height: 100vh;
  color: black;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1>:not(style):not(style) {
  margin: 0;
}

.emotion-1>:not(style)~:not(style) {
  margin-top: 24px;
}

.emotion-2 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
  font-weight: 400;
}

.emotion-3 {
  background-color: #FFFFF3;
  color: #1D263B;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.43;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 6px 16px;
  color: rgb(95, 33, 32);
  background-color: rgb(253, 237, 237);
}

.emotion-3 .MuiAlert-icon {
  color: #d32f2f;
}

.emotion-4 {
  margin-right: 12px;
  padding: 7px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 22px;
  opacity: 0.9;
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: inherit;
}

.emotion-6 {
  padding: 8px 0;
  min-width: 0;
  overflow: auto;
}

.emotion-7 {
  margin: 0;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1.1428571428571428rem;
  line-height: 1.5;
  color: #d32f2f;
  margin-bottom: 0.35em;
  font-weight: 500;
  margin-top: -2px;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 5px 15px;
  border: 1px solid currentColor;
  border-color: var(--variant-outlinedBorder, currentColor);
  background-color: var(--variant-outlinedBg);
  color: var(--variant-outlinedColor);
  --variant-textColor: #1D263B;
  --variant-outlinedColor: #1D263B;
  --variant-outlinedBorder: rgba(29, 38, 59, 0.5);
  --variant-containedColor: #960200;
  --variant-containedBg: #1D263B;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-8.Mui-disabled {
  border: 1px solid rgba(0, 0, 0, 0.12);
}

@media (hover: hover) {
  .emotion-8:hover {
    --variant-containedBg: #384A73;
    --variant-textBg: rgba(29, 38, 59, 0.04);
    --variant-outlinedBorder: #1D263B;
    --variant-outlinedBg: rgba(29, 38, 59, 0.04);
  }
}

.emotion-8.MuiButton-loading {
  color: transparent;
}

<div>
  <main
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 emotion-0"
    style="--Paper-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiStack-root emotion-1"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 emotion-2"
        tabindex="-1"
      >
        Something went wrong...
      </h3>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard emotion-3"
        role="alert"
        style="--Paper-shadow: none;"
      >
        <div
          class="MuiAlert-icon emotion-4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-5"
            data-testid="ErrorOutlineIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message emotion-6"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root emotion-7"
          >
            Please try again
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        role="button"
        tabindex="0"
        type="button"
      >
        Go home
      </button>
    </div>
  </main>
</div>
`;

exports[`Error component > snapshot with custom styles and texts 1`] = `
.emotion-0 {
  background-color: #FFFFF3;
  color: #1D263B;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  padding: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 2rem;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  background-color: default;
  min-height: 100vh;
  color: black;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1>:not(style):not(style) {
  margin: 0;
}

.emotion-1>:not(style)~:not(style) {
  margin-top: 24px;
}

.emotion-2 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
  font-weight: 400;
}

.emotion-3 {
  background-color: #FFFFF3;
  color: #1D263B;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.43;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 6px 16px;
  color: rgb(95, 33, 32);
  background-color: rgb(253, 237, 237);
}

.emotion-3 .MuiAlert-icon {
  color: #d32f2f;
}

.emotion-4 {
  margin-right: 12px;
  padding: 7px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 22px;
  opacity: 0.9;
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: inherit;
}

.emotion-6 {
  padding: 8px 0;
  min-width: 0;
  overflow: auto;
}

.emotion-7 {
  margin: 0;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1.1428571428571428rem;
  line-height: 1.5;
  color: #d32f2f;
  margin-bottom: 0.35em;
  font-weight: 500;
  margin-top: -2px;
}

.emotion-8 {
  margin: 0;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1.1428571428571428rem;
  line-height: 1.75;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 5px 15px;
  border: 1px solid currentColor;
  border-color: var(--variant-outlinedBorder, currentColor);
  background-color: var(--variant-outlinedBg);
  color: var(--variant-outlinedColor);
  --variant-textColor: #1D263B;
  --variant-outlinedColor: #1D263B;
  --variant-outlinedBorder: rgba(29, 38, 59, 0.5);
  --variant-containedColor: #960200;
  --variant-containedBg: #1D263B;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-9::-moz-focus-inner {
  border-style: none;
}

.emotion-9.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-9 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-9.Mui-disabled {
  border: 1px solid rgba(0, 0, 0, 0.12);
}

@media (hover: hover) {
  .emotion-9:hover {
    --variant-containedBg: #384A73;
    --variant-textBg: rgba(29, 38, 59, 0.04);
    --variant-outlinedBorder: #1D263B;
    --variant-outlinedBg: rgba(29, 38, 59, 0.04);
  }
}

.emotion-9.MuiButton-loading {
  color: transparent;
}

<div>
  <main
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 emotion-0"
    style="--Paper-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiStack-root emotion-1"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 emotion-2"
        tabindex="-1"
      >
        Something went wrong...
      </h3>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard emotion-3"
        role="alert"
        style="--Paper-shadow: none;"
      >
        <div
          class="MuiAlert-icon emotion-4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-5"
            data-testid="ErrorOutlineIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message emotion-6"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root emotion-7"
          >
            Custom error
          </div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 emotion-8"
          >
            Code: XYZ
          </h6>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-9"
        role="button"
        tabindex="0"
        type="button"
      >
        Back
      </button>
    </div>
  </main>
</div>
`;
